SCR #628258 - fix: change z-index of scroll up button

--- a/src/modules/core/components/scroll-up/styles/themes/_default.scss
+++ b/src/modules/core/components/scroll-up/styles/themes/_default.scss
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: ef.get-value($themeDefault, 'bottom');
     left: 50%;
-    z-index: 1000;
+    z-index: 100;
     width: 100%;
     max-width: ef.get-value($themeDefault, 'maxWidth');
     transform: translateX(-50%);
